--- a/src/components/createkupon/CreateKupon.module.css
+++ b/src/components/createkupon/CreateKupon.module.css
@@ -29,5 +29,14 @@
 
 .btn:hover {
     background-color: #224cbd;
+}
 
+@media (max-width: 1000px) {
+    .input {
+        width: calc(100% - 20px);
+    }
+
+    .btn {
+        width: 200px;
+    }
 }
